--- a/app/src/main/res/layout/activity_consult_list_view.xml
+++ b/app/src/main/res/layout/activity_consult_list_view.xml
@@ -15,27 +15,19 @@
         android:layout_weight="1">
 
         <ExpandableListView
+            android:id="@+id/listaConsultas_emAberto"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TextView
-            android:id="@+id/message"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="@string/title_home" />
-
+            android:layout_height="match_parent"
+            android:layout_margin="8dp"/>
     </FrameLayout>
 
+<!--
     <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
+        android:id="@+id/listaConsultas_bottomNavigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:background="?android:attr/windowBackground"
         app:menu="@menu/navigation" />
-
+-->
 </LinearLayout>
