--- a/app/src/main/res/layout/app_bar_user_dashboard.xml
+++ b/app/src/main/res/layout/app_bar_user_dashboard.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:backgroundTint="@android:color/holo_orange_light"
+        app:backgroundTint="@color/colorSecondaryAccent"
         app:srcCompat="@drawable/ic_logout_variant_white_18dp" />
 
 </android.support.design.widget.CoordinatorLayout>
