--- a/app/src/main/res/layout/content_nova_consulta.xml
+++ b/app/src/main/res/layout/content_nova_consulta.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,23 +11,17 @@
     tools:showIn="@layout/activity_nova_consulta">
 
     <ScrollView
-        android:layout_width="407dp"
-        android:layout_height="599dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
-        tools:layout_editor_absoluteY="5dp"
-        android:layout_marginLeft="0dp">
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:orientation="vertical"
-            android:weightSum="1">
+            >
 
             <!-- Quando o paciente já for cadastrado, o cpf recupera as informações de nome e nascimento -->
             <EditText
@@ -80,10 +74,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:minWidth="250dp"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+               />
 
             <Spinner
                 android:id="@+id/nvConsul_idRegiao"
@@ -96,10 +87,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:minWidth="250dp"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/nvConsul_spGenero">
+                >
 
             </Spinner>
 
@@ -115,10 +103,7 @@
                 android:layout_marginTop="16dp"
                 android:elevation="1dp"
                 android:minWidth="250dp"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/nvConsul_idRegiao" />
+                />
 
             <Spinner
                 android:id="@+id/nvConsul_tipoDuvida"
@@ -131,54 +116,56 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:minWidth="250dp"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/nvConsul_idArea" />
+               />
 
-         <android.support.constraint.ConstraintLayout
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:layout_marginTop="8dp"
-             android:layout_marginBottom="8dp">
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp">
 
-             <EditText
-                 android:id="@+id/nvConsul_txCaso"
-                 android:layout_width="320dp"
-                 android:layout_height="wrap_content"
-                 android:layout_margin="8dp"
-                 android:layout_marginLeft="8dp"
-                 android:layout_marginStart="8dp"
-                 android:allowUndo="true"
-                 android:hint="Descreva o caso da melhor forma possível"
-                 android:inputType="text|textMultiLine"
-                 android:theme="@style/AppTheme"
-                 app:layout_constraintBottom_toBottomOf="parent"
-                 app:layout_constraintHorizontal_bias="0.0"
-                 app:layout_constraintLeft_toLeftOf="parent"
-                 app:layout_constraintRight_toRightOf="parent"
-                 app:layout_constraintTop_toTopOf="parent" />
+                <EditText
+                    android:id="@+id/nvConsul_txCaso"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
+                    android:allowUndo="true"
+                    android:hint="Descreva o caso da melhor forma possível"
+                    android:inputType="text|textMultiLine"
+                    android:theme="@style/AppTheme"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
 
-             <ImageButton
-                 android:id="@+id/nvConsul_botaoFalar"
-                 android:layout_width="48dp"
-                 android:layout_height="48dp"
-                 android:layout_margin="8dp"
-                 android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
-                 android:theme="@android:style/Theme.Material.Light.Voice"
-                 app:srcCompat="@android:drawable/ic_btn_speak_now"
-                 app:layout_constraintTop_toTopOf="parent"
-                 app:layout_constraintBottom_toBottomOf="parent"
-                 android:layout_marginTop="8dp"
-                 android:layout_marginBottom="8dp"
-                 app:layout_constraintVertical_bias="0.466"
-                 app:layout_constraintLeft_toRightOf="@+id/nvConsul_txCaso"
-                 android:layout_marginLeft="8dp"
-                 android:layout_marginRight="8dp"
-                 app:layout_constraintRight_toRightOf="parent" />
+                <ImageButton
+                    android:id="@+id/nvConsul_botaoFalar"
+                    style="@style/Widget.AppCompat.ImageButton"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_margin="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
+                    android:longClickable="true"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintHorizontal_bias="0.232"
+                    app:layout_constraintLeft_toRightOf="@+id/nvConsul_txCaso"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.466"
+                    app:srcCompat="@android:drawable/ic_btn_speak_now"
+                    tools:clickable="true" />
 
-         </android.support.constraint.ConstraintLayout>
+            </android.support.constraint.ConstraintLayout>
 
 
             <ImageButton
@@ -207,4 +194,4 @@
         </LinearLayout>
     </ScrollView>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
