--- a/app/src/main/res/layout/content_novo_usuario.xml
+++ b/app/src/main/res/layout/content_novo_usuario.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,19 +8,13 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.dehcors.teleconsultorapp.NovoUsuario"
-    tools:layout_editor_absoluteX="0dp"
-    tools:layout_editor_absoluteY="81dp"
     tools:showIn="@layout/novo_usuario">
 
 
     <ScrollView
-        android:layout_width="344dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1">
+              >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,6 +23,16 @@
             android:weightSum="1">
 
 
+            <Spinner
+                android:id="@+id/novoUsuario_spTipoUsuario"
+                style="@android:style/Widget.Material.Light.Spinner.Underlined"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="16dp"
+                android:text="@string/type_doctor" />
 
             <EditText
                 android:id="@+id/novoUsuario_nome"
@@ -41,10 +45,7 @@
                 android:layout_marginTop="24dp"
                 android:hint="@string/full_name"
                 android:inputType="textPersonName"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            />
 
             <EditText
                 android:id="@+id/novoUsuario_nu_cpf"
@@ -54,8 +55,8 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="16dp"
                 android:hint="@string/cpf"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"/>
+                android:singleLine="true"
+                 />
 
             <EditText
                 android:id="@+id/novoUsuario_nu_telefone"
@@ -68,8 +69,7 @@
                 android:layout_marginTop="16dp"
                 android:hint="@string/tel"
                 android:inputType="phone"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent" />
+                />
 
             <EditText
                 android:id="@+id/novoUsuario_ed_email"
@@ -82,22 +82,18 @@
                 android:layout_marginTop="16dp"
                 android:hint="@string/email"
                 android:inputType="textEmailAddress"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent" />
+               />
 
-            <EditText
-                android:id="@+id/novoUsuario_id_profissao"
+            <Spinner
+                android:id="@+id/novoUsuario_spProfissao"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
-                android:hint="@string/prof"
-                android:inputType="text"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"/>
+                style="@android:style/Widget.Material.Light.Spinner.Underlined"/>
 
             <EditText
                 android:id="@+id/novoUsuario_nu_reg_profissional"
@@ -110,8 +106,7 @@
                 android:layout_marginTop="16dp"
                 android:hint="@string/reg_prof"
                 android:inputType="number"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"/>
+             />
 
             <EditText
                 android:id="@+id/novoUsuario_sg_uf_registro"
@@ -124,13 +119,13 @@
                 android:layout_marginTop="16dp"
                 android:hint="@string/orgao_reg"
                 android:inputType="textShortMessage"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent" />
+                android:singleLine="true"
+                 />
 
-            <EditText
-                android:id="@+id/novoUsuario_id_unidade"
+            <Spinner
+                android:id="@+id/novoUsuario_spUnidade"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
@@ -138,8 +133,7 @@
                 android:layout_marginTop="16dp"
                 android:hint="@string/unidade"
                 android:inputType="text"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent" />
+                style="@android:style/Widget.Material.Light.Spinner.Underlined"/>
 
             <EditText
                 android:id="@+id/novoUsuario_tx_senha"
@@ -164,129 +158,79 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
                 android:inputType="textWebPassword"
                 android:ems="10"
                 android:hint="@string/rep_password"/>
 
+
+            <ImageButton
+                android:id="@+id/novoUsuario_inserirFoto"
+                style="@android:style/Widget.ImageButton"
+                android:layout_width="250dp"
+                android:layout_height="56dp"
+                android:layout_gravity="center"
+                android:layout_margin="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="24dp"
+                android:contentDescription="inserir foto"
+                app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />
+
             <TextView
-                android:id="@+id/novoUsuario_tx_userType"
+                android:id="@+id/novoUsuario_tx_foto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="32dp"
-                android:text="@string/type_user"
+                android:text="@string/photo"
                 android:textAlignment="center"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textSize="14sp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="parent"
+                tools:layout_editor_absoluteY="68dp" />
 
-            <CheckBox
-                android:id="@+id/novoUsuario_ckbox_tipo_usuario_consultor"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
+            <ImageButton
+                android:id="@+id/novoUsuario_tx_curriculo"
+                style="@android:style/Widget.ImageButton"
+                android:layout_width="250dp"
+                android:layout_height="56dp"
+                android:layout_gravity="center"
+                android:layout_margin="8dp"
+                android:layout_marginBottom="8dp"
                 android:layout_marginTop="16dp"
-                android:text="@string/type_doctor" />
+                app:srcCompat="@drawable/ic_file_document_black_36dp" />
 
-            <CheckBox
-                android:id="@+id/novoUsuario_ckbox_tipo_usuario_agente"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:layout_marginTop="16dp"
-                android:text="@string/type_agente"/>
-
-            <android.support.constraint.ConstraintLayout
+            <TextView
+                android:id="@+id/novoUsuario_curriculum"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/novoUsuario_tx_foto"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="16dp"
-                    android:text="@string/photo"
-                    android:textAlignment="center"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <ImageButton
-                    android:id="@+id/novoUsuario_ed_foto"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_marginBottom="24dp"
-                    android:layout_marginLeft="47dp"
-                    android:layout_marginStart="47dp"
-                    android:layout_marginTop="24dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_menu_camera"
-                    tools:ignore="RtlHardcoded" />
-
-                <TextView
-                    android:id="@+id/novoUsuario_curriculum"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="87dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginTop="16dp"
-                    android:text="@string/tx_cv"
-                    android:textAlignment="center"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:ignore="RtlHardcoded" />
-
-                <ImageButton
-                    android:id="@+id/novoUsuario_tx_curriculo"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginTop="17dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintHorizontal_bias="0.742"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.41"
-                    app:srcCompat="@drawable/ic_attachment_black_24dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp" />
-
-                <Button
-                    android:id="@+id/novoUsuario_btnSalvar"
-                    android:layout_width="130dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="0.10"
-                    android:background="@drawable/btn_text_custom"
-                    android:text="@string/btn_save"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="40dp"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintVertical_bias="1.5"
-                     />
-
-            </android.support.constraint.ConstraintLayout>
+                android:layout_height="48dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:text="@string/tx_cv"
+                android:textAlignment="center"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                app:layout_constraintRight_toRightOf="parent"
+                tools:layout_editor_absoluteY="44dp" />
 
 
+
+
+
+            <Button
+                android:id="@+id/novoUsuario_btnSalvar"
+                style="@android:style/Widget.Material.Button.Colored"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="8dp"
+
+                android:layout_marginTop="8dp"
+                android:text="@string/btn_save" />
         </LinearLayout>
     </ScrollView>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
