--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,104 +1,175 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.dehcors.teleconsultorapp.MainActivity">
+    tools:context="com.example.dehcors.teleconsultorapp.MainActivity"
+    android:orientation="vertical"
+    android:weightSum="1"
+    >
 
     <ImageView
         android:id="@+id/main_logo"
-        android:layout_width="270dp"
-        android:layout_height="179dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.011"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_margin="8dp"
         app:srcCompat="@drawable/imagem"
-        tools:ignore="ContentDescription" />
+        android:layout_gravity="right"/>
 
 
-    <ImageButton
-        android:id="@+id/main_criarConta"
-        android:layout_width="wrap_content"
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:layout_weight="0.01">
+
+        <ImageButton
+            android:id="@+id/main_woman"
+            android:layout_width="124dp"
+            android:layout_height="112dp"
+            app:srcCompat="@drawable/woman2"
+            android:layout_column="0"
+            android:layout_row="0"/>
+
+
+        <TextView
+            android:id="@+id/txMulher"
+            style="@android:style/Widget.DeviceDefault.TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:layout_row="1"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="8dp"
+            android:text="@string/saude_wo"
+            android:textColor="@android:color/black"
+            />
+
+
+        <ImageButton
+            android:id="@+id/main_bb"
+            android:layout_width="124dp"
+            android:layout_height="112dp"
+            app:srcCompat="@drawable/bb"
+            android:layout_column="2"
+            android:layout_row="0" />
+
+
+        <TextView
+            android:id="@+id/txCrianca"
+            style="@android:style/Widget.DeviceDefault.TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="2"
+            android:layout_row="1"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="8dp"
+            android:text="@string/saude_bb"
+            android:textColor="@android:color/black"
+            />
+
+        <ImageButton
+            android:id="@+id/main_oldMan"
+            android:layout_width="124dp"
+            android:layout_height="112dp"
+            android:layout_column="4"
+            android:layout_row="0"
+            app:srcCompat="@drawable/old_man"/>
+
+        <TextView
+            android:id="@+id/txIdoso"
+            style="@android:style/Widget.DeviceDefault.TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="4"
+            android:layout_row="1"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="8dp"
+            android:text="@string/saude_vo"
+            android:textColor="@android:color/black"
+            />
+
+        <ImageButton
+            android:id="@+id/main_acessarConta"
+            android:layout_width="124dp"
+            android:layout_height="112dp"
+            android:layout_column="4"
+            android:layout_marginLeft="16dp"
+            android:layout_row="3"
+            app:srcCompat="@drawable/entrar_conta" />
+
+        <TextView
+            android:id="@+id/txtAcesse"
+            style="@android:style/Widget.DeviceDefault.TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="4"
+            android:layout_row="4"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="8dp"
+            android:text="@string/acesse"
+            android:textColor="@android:color/black"
+            android:layout_marginLeft="16dp"/>
+
+
+
+
+        <ImageButton
+            android:id="@+id/main_criarConta"
+            android:layout_width="124dp"
+            android:layout_height="112dp"
+            android:layout_marginRight="16dp"
+            android:layout_column="0"
+            android:layout_row="3"
+            app:srcCompat="@drawable/plus_icon_dc" />
+
+        <TextView
+            android:id="@+id/txtCriar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="16dp"
+            android:layout_column="0"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="8dp"
+            android:layout_row="4"
+            android:text="@string/criar"
+            android:textColor="@android:color/black" />
+
+
+
+    </GridLayout>
+
+
+    <TextView
+        style="@android:style/Widget.Material.TextView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:adjustViewBounds="true"
-        android:background="@drawable/icon_bkgrnd_no"
-        android:baselineAlignBottom="true"
-        android:cropToPadding="false"
-        android:elevation="4dp"
-        android:paddingBottom="8dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:paddingTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.79"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.629"
-        app:srcCompat="@drawable/ic_account_plus_black_24dp"
-        android:contentDescription="@string/create_count"/>
+        android:elevation="2dp"
+        android:text="@string/encontre"
+        android:textAlignment="center"
+        android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"
+        android:textColorLink="@color/colorSecondaryAccent"
+        android:textSize="17sp"
+        android:textStyle="bold" />
 
-    <ImageButton
-        android:id="@+id/main_acessarConta"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:background="@drawable/icon_bkgrnd_ye"
-        android:baselineAlignBottom="true"
-        android:elevation="4dp"
-        android:paddingBottom="8dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:paddingTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.209"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.629"
-        app:srcCompat="@drawable/ic_account_black_24dp"
-        android:contentDescription="@string/acess_count" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="182dp"
+        android:layout_margin="8dp">
 
-    <TextView
-        android:id="@+id/txtAcesse"
-        style="@android:style/Widget.DeviceDefault.TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="6dp"
-        android:paddingRight="2dp"
-        android:paddingStart="2dp"
-        android:text="@string/acesse"
-        android:textColor="@android:color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.208"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/main_acessarConta"
-        app:layout_constraintVertical_bias="0.106"
-        tools:ignore="RtlHardcoded" />
 
-    <TextView
-        android:id="@+id/txtCriar"
-        android:layout_width="wrap_content"
-        android:layout_height="18dp"
-        android:paddingLeft="2dp"
-        android:paddingRight="2dp"
-        android:text="@string/criar"
-        android:textColor="@android:color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintVertical_bias="0.049"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/main_criarConta"
-        app:layout_constraintHorizontal_bias="0.75" />
+        <WebView
+            android:id="@+id/main_webView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
 
-</android.support.constraint.ConstraintLayout>
+        </WebView>
+
+    </FrameLayout>
+
+</LinearLayout>
