--- a/app/src/main/res/layout/activity_relatorios.xml
+++ b/app/src/main/res/layout/activity_relatorios.xml
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.dehcors.teleconsultorapp.RelatoriosActivity">
 
+
+    <ImageView
+        android:id="@+id/relatorios_logo"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_gravity="right"
+        android:layout_margin="8dp"
+        app:srcCompat="@drawable/imagem" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/ficha_verde_icon"
-        tools:layout_editor_absoluteY="192dp"
-        tools:layout_editor_absoluteX="118dp" />
-</android.support.constraint.ConstraintLayout>
+        tools:layout_editor_absoluteX="118dp"
+        tools:layout_editor_absoluteY="192dp" />
+</LinearLayout>
