--- a/app/src/main/res/layout/activity_rota.xml
+++ b/app/src/main/res/layout/activity_rota.xml
@@ -10,6 +10,12 @@
     tools:context="com.example.dehcors.teleconsultorapp.RotaActivity"
     android:weightSum="1">
 
+    <ImageView
+        android:id="@+id/userDash_logo"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        app:srcCompat="@drawable/imagem"
+        android:layout_gravity="right"/>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -20,24 +26,36 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <ImageView
+                android:id="@+id/rota_view1"
                 android:layout_width="match_parent"
                 android:layout_height="124dp"
                 android:layout_margin="8dp"
+                android:adjustViewBounds="false"
+                android:clickable="true"
+                android:cropToPadding="false"
+                android:elevation="2dp"
+                android:theme="@android:style/Theme.Material.Light.Panel"
                 app:srcCompat="@drawable/imagem1" />
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/rota_view2"
                 android:layout_width="match_parent"
                 android:layout_height="124dp"
                 android:layout_margin="8dp"
+                android:clickable="true"
+                android:theme="@android:style/Theme.Material.Light.Panel"
                 app:srcCompat="@drawable/imagem3" />
 
             <ImageView
+                android:id="@+id/rota_view3"
                 android:layout_width="wrap_content"
                 android:layout_height="124dp"
                 android:layout_margin="8dp"
-                app:srcCompat="@drawable/imagem4"/>
+                android:clickable="true"
+                android:theme="@android:style/Theme.Material.Light.Panel"
+                app:srcCompat="@drawable/imagem4" />
         </LinearLayout>
 
 
