--- a/app/src/main/res/layout/content_user_dashboard.xml
+++ b/app/src/main/res/layout/content_user_dashboard.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.dehcors.teleconsultorapp.UserDashboard"
     tools:showIn="@layout/app_bar_user_dashboard">
@@ -13,159 +14,130 @@
         android:id="@+id/userDash_logo"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        android:layout_margin="8dp"
         app:srcCompat="@drawable/imagem"
-        tools:ignore="ContentDescription" />
+        android:layout_gravity="right"/>
 
-    <TextView
-        android:id="@+id/userDash_tx_verConsulta"
-        android:layout_width="124dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:orientation="horizontal"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/consulta"
-        android:textSize="14sp"
-        android:textAlignment="center"
-        app:layout_constraintHorizontal_bias="0.11"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userDash_verConsulta" />
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp"
+      >
 
-    <TextView
-        android:id="@+id/userDash_tx_novaConsulta"
-        android:layout_width="124dp"
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageButton
+                android:id="@+id/userDash_verConsulta"
+                android:layout_width="124dp"
+                android:layout_height="124dp"
+                android:layout_margin="8dp"
+                android:contentDescription="@string/consulta"
+                app:srcCompat="@drawable/search_icon"
+                android:layout_column="0"
+                android:layout_row="0"/>
+
+            <TextView
+                android:id="@+id/userDash_tx_verConsulta"
+                android:layout_width="124dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:text="@string/consulta"
+                android:textSize="14sp"
+                android:textAlignment="center"
+                android:layout_column="0"
+                android:layout_row="1"
+                />
+
+            <ImageButton
+                android:id="@+id/userDash_newConsul"
+                android:layout_width="124dp"
+                android:layout_height="124dp"
+                android:layout_column="10"
+                android:layout_margin="8dp"
+                android:layout_row="0"
+                android:contentDescription="@string/new_check"
+                app:srcCompat="@drawable/document_icon" />
+
+            <TextView
+                android:id="@+id/userDash_tx_novaConsulta"
+                android:layout_width="124dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:text="@string/new_check"
+                android:textAlignment="center"
+                android:textSize="14sp"
+                android:layout_column="10"
+                android:layout_row="1"/>
+        </GridLayout>
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/new_check"
-        android:textSize="14sp"
-        android:textAlignment="center"
-        app:layout_constraintHorizontal_bias="0.92"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userDash_newConsul" />
-
-    <ImageButton
-        android:id="@+id/userDash_relatorios"
-        android:layout_width="124dp"
-        android:layout_height="124dp"
-        android:layout_marginBottom="136dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.922"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@drawable/relatorio1"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:contentDescription="@string/relatorio"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/userDash_tx_novaConsulta"
-        app:layout_constraintVertical_bias="0.987" />
+        android:layout_marginTop="48dp"
+        android:orientation="horizontal">
 
-    <ImageButton
-        android:id="@+id/userDash_rotas"
-        android:layout_width="124dp"
-        android:layout_height="124dp"
-        android:layout_marginBottom="136dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.11"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@drawable/map_icon1"
-        android:contentDescription="@string/rotas"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/userDash_tx_verConsulta"
-        app:layout_constraintVertical_bias="1.0" />
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <ImageButton
-        android:id="@+id/userDash_newConsul"
-        android:layout_width="124dp"
-        android:layout_height="124dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="98dp"
-        app:layout_constraintHorizontal_bias="0.922"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/document_icon"
-        android:contentDescription="@string/new_check"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/userDash_relatorios"
-        app:layout_constraintVertical_bias="0.0" />
+            <ImageButton
+                android:id="@+id/userDash_relatorios"
+                android:layout_width="124dp"
+                android:layout_height="124dp"
+                android:layout_margin="8dp"
+                app:srcCompat="@drawable/relatorio1"
+                android:contentDescription="@string/relatorio"
+                android:layout_column="0"
+                android:layout_row="0"/>
 
-    <ImageButton
-        android:id="@+id/userDash_verConsulta"
-        android:layout_width="124dp"
-        android:layout_height="124dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="98dp"
-        app:layout_constraintHorizontal_bias="0.11"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/search_icon"
-        android:contentDescription="@string/consulta"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/userDash_rotas"
-        app:layout_constraintVertical_bias="0.0" />
+            <TextView
+                android:id="@+id/userDash_tx_verRelatorio"
+                android:layout_width="124dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:text="@string/relatorio"
+                android:textSize="14sp"
+                android:textAlignment="center"
+                android:layout_column="0"
+                android:layout_row="1"/>
 
-    <TextView
-        android:id="@+id/userDash_tx_verRota"
-        android:layout_width="124dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="17dp"
-        android:text="@string/rotas"
-        android:textSize="14sp"
-        android:textAlignment="center"
-        app:layout_constraintHorizontal_bias="0.12"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userDash_rotas" />
+            <ImageButton
+                android:id="@+id/userDash_rotas"
+                android:layout_width="124dp"
+                android:layout_height="124dp"
+                app:srcCompat="@drawable/map_icon1"
+                android:contentDescription="@string/rotas"
+                android:layout_margin="8dp"
+                android:layout_column="10"
+                android:layout_row="0"/>
 
-    <TextView
-        android:id="@+id/userDash_tx_verRelatorio"
-        android:layout_width="124dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="18dp"
-        android:text="@string/relatorio"
-        android:textSize="14sp"
-        android:textAlignment="center"
-        app:layout_constraintHorizontal_bias="0.803"
-        app:layout_constraintLeft_toRightOf="@+id/userDash_tx_verRota"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userDash_relatorios" />
 
-</android.support.constraint.ConstraintLayout>
+            <TextView
+                android:id="@+id/userDash_tx_verRota"
+                android:layout_width="124dp"
+                android:layout_height="wrap_content"
+               android:layout_margin="8dp"
+                android:text="@string/rotas"
+                android:textSize="14sp"
+                android:textAlignment="center"
+                android:layout_column="10"
+                android:layout_row="1"/>
+
+
+        </GridLayout>
+
+    </LinearLayout>
+
+
+</LinearLayout>
