--- a/app/src/main/res/menu/rota_menu.xml
+++ b/app/src/main/res/menu/rota_menu.xml
@@ -8,7 +8,7 @@
 
     <item
         android:id="@+id/rota_menu_programar"
-        android:icon="@android:drawable/ic_menu_mylocation"
+        android:icon="@drawable/ic_local_black"
         android:title="@string/title_dashboard_rota" />
 
     <item
