--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,25 +14,25 @@
         android:id="@+id/main_logo"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_margin="8dp"
-        app:srcCompat="@drawable/imagem"
-        android:layout_gravity="right"/>
-
+        android:layout_gravity="right"
+        app:srcCompat="@drawable/logo1" />
 
 
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:layout_weight="0.01">
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp">
 
         <ImageButton
             android:id="@+id/main_woman"
-            android:layout_width="124dp"
+            android:layout_width="112dp"
             android:layout_height="112dp"
-            app:srcCompat="@drawable/woman2"
             android:layout_column="0"
-            android:layout_row="0"/>
+            android:layout_row="0"
+            app:srcCompat="@drawable/girl3_a"
+            style="@android:style/Widget.Material.ImageButton"/>
 
 
         <TextView
@@ -41,21 +41,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="0"
-            android:layout_row="1"
             android:layout_gravity="center_horizontal"
             android:layout_margin="8dp"
+            android:layout_row="1"
             android:text="@string/saude_wo"
-            android:textColor="@android:color/black"
-            />
+            android:textColor="@android:color/black" />
 
 
         <ImageButton
             android:id="@+id/main_bb"
-            android:layout_width="124dp"
+            android:layout_width="112dp"
             android:layout_height="112dp"
-            app:srcCompat="@drawable/bb"
             android:layout_column="2"
-            android:layout_row="0" />
+            android:layout_row="0"
+            app:srcCompat="@drawable/baby2"
+            style="@android:style/Widget.Material.ImageButton"/>
 
 
         <TextView
@@ -64,112 +64,90 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="2"
-            android:layout_row="1"
             android:layout_gravity="center_horizontal"
             android:layout_margin="8dp"
+            android:layout_row="1"
             android:text="@string/saude_bb"
-            android:textColor="@android:color/black"
-            />
-
-        <ImageButton
-            android:id="@+id/main_oldMan"
-            android:layout_width="124dp"
-            android:layout_height="112dp"
-            android:layout_column="4"
-            android:layout_row="0"
-            app:srcCompat="@drawable/old_man"/>
+            android:textColor="@android:color/black" />
 
         <TextView
             android:id="@+id/txIdoso"
             style="@android:style/Widget.DeviceDefault.TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_column="4"
-            android:layout_row="1"
+            android:layout_column="1"
             android:layout_gravity="center_horizontal"
             android:layout_margin="8dp"
+            android:layout_row="1"
             android:text="@string/saude_vo"
-            android:textColor="@android:color/black"
-            />
+            android:textColor="@android:color/black" />
+
+        <ImageButton
+            android:id="@+id/main_oldMan"
+            style="@android:style/Widget.Material.ImageButton"
+            android:layout_width="112dp"
+            android:layout_height="112dp"
+            android:layout_column="1"
+            android:layout_row="0"
+            app:srcCompat="@drawable/oldman2" />
+
+    </GridLayout>
+
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="124dp"
+            android:layout_marginBottom="8dp">
+
 
         <ImageButton
             android:id="@+id/main_acessarConta"
+            style="@android:style/Widget.Material.ImageButton"
             android:layout_width="124dp"
-            android:layout_height="112dp"
-            android:layout_column="4"
-            android:layout_marginLeft="16dp"
-            android:layout_row="3"
-            app:srcCompat="@drawable/entrar_conta" />
+            android:layout_height="108dp"
+            android:layout_alignEnd="@+id/txtAcesse"
+            android:layout_alignParentTop="true"
+            app:srcCompat="@drawable/signin2" />
 
-        <TextView
-            android:id="@+id/txtAcesse"
-            style="@android:style/Widget.DeviceDefault.TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_column="4"
-            android:layout_row="4"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="8dp"
-            android:text="@string/acesse"
-            android:textColor="@android:color/black"
-            android:layout_marginLeft="16dp"/>
-
-
+            <TextView
+                android:id="@+id/txtAcesse"
+                style="@android:style/Widget.DeviceDefault.TextView"
+                android:layout_width="124dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/acesse"
+                android:textColor="@android:color/black"
+                android:gravity="center"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="58dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true" />
 
 
         <ImageButton
             android:id="@+id/main_criarConta"
             android:layout_width="124dp"
-            android:layout_height="112dp"
-            android:layout_marginRight="16dp"
-            android:layout_column="0"
-            android:layout_row="3"
-            app:srcCompat="@drawable/plus_icon_dc" />
+            android:layout_height="108dp"
+            app:srcCompat="@drawable/add2"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/main_acessarConta"
+            android:layout_marginStart="40dp" />
+
 
         <TextView
             android:id="@+id/txtCriar"
-            android:layout_width="wrap_content"
+            android:layout_width="124dp"
             android:layout_height="wrap_content"
-            android:layout_marginRight="16dp"
-            android:layout_column="0"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="8dp"
-            android:layout_row="4"
+            android:gravity="center"
             android:text="@string/criar"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/black"
+            android:layout_below="@+id/main_criarConta"
+            android:layout_alignStart="@+id/main_criarConta" />
+
+
+        </RelativeLayout>
 
 
 
-    </GridLayout>
-
-
-    <TextView
-        style="@android:style/Widget.Material.TextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:elevation="2dp"
-        android:text="@string/encontre"
-        android:textAlignment="center"
-        android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"
-        android:textColorLink="@color/colorSecondaryAccent"
-        android:textSize="17sp"
-        android:textStyle="bold" />
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="182dp"
-        android:layout_margin="8dp">
-
-
-        <WebView
-            android:id="@+id/main_webView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
-
-        </WebView>
-
-    </FrameLayout>
 
 </LinearLayout>
