--- a/app/src/main/res/layout/activity_nova_consulta.xml
+++ b/app/src/main/res/layout/activity_nova_consulta.xml
@@ -78,6 +78,6 @@
         android:layout_margin="8dp"
         app:layout_anchor="@+id/nConsul_content"
         app:layout_anchorGravity="top|right"
-        app:srcCompat="@drawable/imagem" />
+        app:srcCompat="@drawable/logo1" />
 
 </android.support.design.widget.CoordinatorLayout>
