--- a/app/src/main/res/layout/activity_relatorios.xml
+++ b/app/src/main/res/layout/activity_relatorios.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.dehcors.teleconsultorapp.RelatoriosActivity">
+    tools:context="com.example.dehcors.teleconsultorapp.RelatoriosActivity"
+    android:weightSum="1">
 
 
     <ImageView
@@ -14,13 +15,111 @@
         android:layout_height="48dp"
         android:layout_gravity="right"
         android:layout_margin="8dp"
-        app:srcCompat="@drawable/imagem" />
+        app:srcCompat="@drawable/logo1" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
+    <android.support.v7.view.menu.ListMenuItemView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ficha_verde_icon"
-        tools:layout_editor_absoluteX="118dp"
-        tools:layout_editor_absoluteY="192dp" />
+        android:orientation="horizontal"
+        android:layout_margin="8dp"
+        android:layout_weight="0.00"
+        android:weightSum="1">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="74dp"
+            android:layout_height="75dp"
+            app:srcCompat="@drawable/ficha_verde_icon" />
+
+        <TextView
+            android:layout_width="187dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.69"
+            android:text="CONSULTAS CONCLUÍDAS"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="74dp"
+            android:layout_height="75dp"
+            android:gravity="center"
+            android:text="123"
+            android:textAlignment="center"
+            android:textColor="@color/colorSecondaryDark"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+    </android.support.v7.view.menu.ListMenuItemView>
+
+    <android.support.v7.view.menu.ListMenuItemView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_margin="8dp"
+        android:layout_weight="0.00"
+        android:weightSum="1">
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="74dp"
+            android:layout_height="75dp"
+            app:srcCompat="@drawable/ficha_verde_icon" />
+
+        <TextView
+            android:layout_width="187dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.69"
+            android:text="CONSULTAS EM ABERTO"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="74dp"
+            android:layout_height="75dp"
+            android:gravity="center"
+            android:text="123"
+            android:textAlignment="center"
+            android:textColor="@color/colorSecondaryDark"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+    </android.support.v7.view.menu.ListMenuItemView>
+
+    <android.support.v7.view.menu.ListMenuItemView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_margin="8dp"
+        android:layout_weight="0.00"
+        android:weightSum="1">
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="74dp"
+            android:layout_height="75dp"
+            app:srcCompat="@drawable/ficha_verde_icon" />
+
+        <TextView
+            android:layout_width="187dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.69"
+            android:text="EXAMES ENCAMINHADOS"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="74dp"
+            android:layout_height="75dp"
+            android:gravity="center"
+            android:text="29"
+            android:textAlignment="center"
+            android:textColor="@color/colorSecondaryDark"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+    </android.support.v7.view.menu.ListMenuItemView>
+
 </LinearLayout>
