--- a/app/src/main/res/layout/nav_header_user_dashboard.xml
+++ b/app/src/main/res/layout/nav_header_user_dashboard.xml
@@ -1,49 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
     android:background="@drawable/side_nav_bar"
+    android:elevation="16dp"
     android:gravity="bottom"
     android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     android:weightSum="1">
 
-    <ImageView
-        android:id="@+id/navHeader_fotoPerfil"
-        android:layout_width="102dp"
-        android:layout_height="102dp"
-        android:layout_marginLeft="16dp"
-        app:srcCompat="@android:drawable/sym_def_app_icon"
-        android:contentDescription="@string/pict"
-        android:layout_weight="0.71"
-        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="96dp"
+        android:layout_marginBottom="20dp"
+        >
 
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/navHeader_fotoPerfil"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:layout_gravity="top"
+            android:src="@drawable/foto_example"
+            app:civ_border_color="@color/colorAccent"
+            app:civ_border_width="2dp" />
 
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:orientation="vertical"
+        android:layout_marginBottom="8dp">
 
         <TextView
             android:id="@+id/navHeader_nomeUsuario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="16dp"
+            android:fontFamily="Roboto Medium"
             android:hint="@string/nome_usuario"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textSize="14sp" />
 
-    <TextView
-        android:id="@+id/navHeader_cpfUsuario"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
-        android:hint="@string/cpf_usuario_ativo"
-        android:textColorHighlight="@color/colorAccent" />
+        <TextView
+            android:id="@+id/navHeader_cpfUsuario"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="Roboto regular"
+            android:hint="@string/cpf_usuario_ativo"
+            android:textSize="14sp" />
 
-
+    </LinearLayout>
 </LinearLayout>
