--- a/app/src/main/res/layout/novo_usuario.xml
+++ b/app/src/main/res/layout/novo_usuario.xml
@@ -39,13 +39,13 @@
         android:layout_height="48dp"
         android:layout_gravity="bottom|left"
         android:layout_marginLeft="300dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="8dp"
         android:visibility="visible"
         app:layout_anchor="@+id/include"
         app:layout_anchorGravity="top|right"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/imagem" />
+        app:srcCompat="@drawable/logo1" />
 
 </android.support.design.widget.CoordinatorLayout>
