adicao de telas para novo agente e novo especialista

--- a/app/src/main/res/drawable/borda_quadro.xml
+++ b/app/src/main/res/drawable/borda_quadro.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <solid android:color="@android:color/transparent"/>
     <stroke android:width="6sp"
-        android:color="@color/colorPrimaryDark"/>
+        android:color="@color/colorSecondaryDark"/>
 
 </shape>
