--- a/app/src/main/res/layout/activity_new_agente.xml
+++ b/app/src/main/res/layout/activity_new_agente.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.dehcors.teleconsultorapp.NovoUsuario">
+    tools:context="com.example.dehcors.teleconsultorapp.NewAgente">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -20,7 +20,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_novo_usuario"
+    <include layout="@layout/new_agente"
         android:id="@+id/include" />
 
 
