--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="indigo">#5c6bc0</color>
     <color name="deepPurple">#813ab7</color>
     <color name="newBackground">#d6d6d6</color>
+    <color name="white">#fff</color>
+    <color name="black">#000</color>
 </resources>
