--- a/app/src/main/res/layout-v23/activity_maps.xml
+++ b/app/src/main/res/layout-v23/activity_maps.xml
@@ -10,13 +10,8 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:theme="@android:style/Theme.Material.Light.LightStatusBar"
         android:title="@string/title_activity_maps">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-             />
 
     </android.support.design.widget.AppBarLayout>
 
