--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,136 +18,180 @@
         app:srcCompat="@drawable/logo1" />
 
 
-    <GridLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp">
-
-        <ImageButton
-            android:id="@+id/main_woman"
-            android:layout_width="112dp"
-            android:layout_height="112dp"
-            android:layout_column="0"
-            android:layout_row="0"
-            app:srcCompat="@drawable/girl3_a"
-            style="@android:style/Widget.Material.ImageButton"/>
+        android:layout_height="387dp"
+        android:layout_margin="8dp">
 
 
-        <TextView
-            android:id="@+id/txMulher"
-            style="@android:style/Widget.DeviceDefault.TextView"
-            android:layout_width="wrap_content"
+        <GridLayout
+            android:layout_width="296dp"
             android:layout_height="wrap_content"
-            android:layout_column="0"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="8dp"
-            android:layout_row="1"
-            android:text="@string/saude_wo"
-            android:textColor="@android:color/black" />
+            android:layout_gravity="center_vertical|center_horizontal"
 
 
-        <ImageButton
-            android:id="@+id/main_bb"
-            android:layout_width="112dp"
-            android:layout_height="112dp"
-            android:layout_column="2"
-            android:layout_row="0"
-            app:srcCompat="@drawable/baby2"
-            style="@android:style/Widget.Material.ImageButton"/>
+            >
 
+            <ImageButton
+                android:id="@+id/main_woman"
+                android:layout_width="96dp"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_gravity="center"
+                android:layout_row="0"
+                app:srcCompat="@drawable/girl3b"
 
-        <TextView
-            android:id="@+id/txCrianca"
-            style="@android:style/Widget.DeviceDefault.TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_column="2"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="8dp"
-            android:layout_row="1"
-            android:text="@string/saude_bb"
-            android:textColor="@android:color/black" />
-
-        <TextView
-            android:id="@+id/txIdoso"
-            style="@android:style/Widget.DeviceDefault.TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_column="1"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="8dp"
-            android:layout_row="1"
-            android:text="@string/saude_vo"
-            android:textColor="@android:color/black" />
-
-        <ImageButton
-            android:id="@+id/main_oldMan"
-            style="@android:style/Widget.Material.ImageButton"
-            android:layout_width="112dp"
-            android:layout_height="112dp"
-            android:layout_column="1"
-            android:layout_row="0"
-            app:srcCompat="@drawable/oldman2" />
-
-    </GridLayout>
-
-    <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="124dp"
-            android:layout_marginBottom="8dp">
-
-
-        <ImageButton
-            android:id="@+id/main_acessarConta"
-            style="@android:style/Widget.Material.ImageButton"
-            android:layout_width="124dp"
-            android:layout_height="108dp"
-            android:layout_alignEnd="@+id/txtAcesse"
-            android:layout_alignParentTop="true"
-            app:srcCompat="@drawable/signin2" />
+                />
 
             <TextView
-                android:id="@+id/txtAcesse"
+                android:id="@+id/txMulher"
                 style="@android:style/Widget.DeviceDefault.TextView"
-                android:layout_width="124dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
+                android:layout_row="1"
+                android:layout_column="0"
+                android:layout_marginBottom="8dp"
+                android:text="@string/saude_wo"
+                android:textColor="@android:color/black" />
+
+            <ImageButton
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:layout_column="1"
+                android:layout_gravity="center"
+                android:layout_row="0"
+                />
+
+            <ImageButton
+                android:id="@+id/main_oldMan"
+                android:layout_width="96dp"
+                android:layout_height="wrap_content"
+                android:layout_column="2"
+                android:layout_gravity="center"
+                android:layout_row="0"
+                app:srcCompat="@drawable/oldman3" />
+
+
+            <TextView
+                android:id="@+id/txIdoso"
+                style="@android:style/Widget.DeviceDefault.TextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="2"
+                android:layout_row="1"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="8dp"
+                android:text="@string/saude_vo"
+                android:textColor="@android:color/black" />
+
+
+            <ImageButton
+                android:id="@+id/main_bb"
+                android:layout_width="96dp"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_gravity="center"
+                android:layout_marginTop="18dp"
+                android:layout_row="2"
+                app:srcCompat="@drawable/baby3" />
+
+            <TextView
+                android:id="@+id/txCrianca"
+                style="@android:style/Widget.DeviceDefault.TextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_row="3"
+                android:layout_marginBottom="8dp"
+                android:text="@string/saude_bb"
+                android:textColor="@android:color/black" />
+
+            <ImageButton
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:layout_column="1"
+                android:layout_gravity="center"
+                android:layout_row="2"
+              />
+
+            <ImageButton
+                android:id="@+id/main_primSoc"
+                android:layout_width="96dp"
+                android:layout_height="wrap_content"
+                android:layout_column="2"
+                android:layout_gravity="center"
+                android:layout_marginTop="18dp"
+                android:layout_row="2"
+                app:srcCompat="@drawable/first_help3" />
+
+            <TextView
+                android:id="@+id/txPrimSoc"
+                style="@android:style/Widget.DeviceDefault.TextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="2"
+                android:layout_row="3"
+                android:layout_marginBottom="8dp"
+                android:text="@string/primSoc"
+                android:textColor="@android:color/black" />
+
+
+            <ImageButton
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:layout_column="1"
+                android:layout_gravity="center"
+                android:layout_row="4"
+                />
+
+
+            <ImageButton
+                android:id="@+id/main_acessarConta"
+                style="@android:style/Widget.Material.ImageButton"
+                android:layout_width="96dp"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_gravity="center"
+                android:layout_marginTop="18dp"
+                android:layout_row="4"
+                app:srcCompat="@drawable/signin3" />
+
+            <TextView
                 android:text="@string/acesse"
-                android:textColor="@android:color/black"
-                android:gravity="center"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginStart="58dp"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentStart="true" />
+                style="@android:style/Widget.DeviceDefault.TextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_row="5"
+                android:textColor="@color/black"
+                android:layout_gravity="center"/>
+
+            <ImageButton
+                android:id="@+id/main_criarConta"
+                android:layout_width="96dp"
+                android:layout_height="wrap_content"
+                android:layout_column="2"
+                android:layout_marginTop="18dp"
+                android:layout_row="4"
+                android:layout_gravity="center"
+                app:srcCompat="@drawable/add3"
+              />
+
+            <TextView
+                android:text="@string/criar"
+                style="@android:style/Widget.DeviceDefault.TextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_row="5"
+                android:layout_column="2"
+                android:textColor="@color/black"
+                android:layout_gravity="center"/>
 
 
-        <ImageButton
-            android:id="@+id/main_criarConta"
-            android:layout_width="124dp"
-            android:layout_height="108dp"
-            app:srcCompat="@drawable/add2"
-            android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/main_acessarConta"
-            android:layout_marginStart="40dp" />
+        </GridLayout>
 
-
-        <TextView
-            android:id="@+id/txtCriar"
-            android:layout_width="124dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/criar"
-            android:textColor="@android:color/black"
-            android:layout_below="@+id/main_criarConta"
-            android:layout_alignStart="@+id/main_criarConta" />
-
-
-        </RelativeLayout>
-
-
+    </FrameLayout>
 
 
 </LinearLayout>
