--- a/app/src/main/res/layout/activity_rota.xml
+++ b/app/src/main/res/layout/activity_rota.xml
@@ -45,6 +45,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:background="?android:attr/windowBackground"
+        app:itemIconTint="@color/colorSecondaryDark"
+        app:itemTextColor="@color/black"
         app:menu="@menu/rota_menu" />
 
 
