--- a/app/src/main/res/layout/content_nova_consulta.xml
+++ b/app/src/main/res/layout/content_nova_consulta.xml
@@ -171,7 +171,7 @@
             <ImageButton
                 android:id="@+id/nvConsul_fotoFilme"
                 style="@android:style/Widget.ImageButton"
-                android:layout_width="250dp"
+                android:layout_width="200dp"
                 android:layout_height="56dp"
                 android:layout_gravity="center"
                 android:layout_marginBottom="8dp"
@@ -181,8 +181,8 @@
             <Button
                 android:id="@+id/nvConsul_saveConsulta"
                 style="@android:style/Widget.Material.Button.Colored"
-                android:layout_width="180dp"
-                android:layout_height="48dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginBottom="24dp"
                 android:layout_marginTop="8dp"
