--- a/app/src/main/res/layout/new_agente.xml
+++ b/app/src/main/res/layout/new_agente.xml
@@ -25,7 +25,7 @@
 
 
             <EditText
-                android:id="@+id/novoUsuario_nu_cpf"
+                android:id="@+id/newAgent_nu_cpf"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
@@ -36,7 +36,7 @@
                 />
 
             <EditText
-                android:id="@+id/novoUsuario_nome"
+                android:id="@+id/newAgent_nome"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -51,7 +51,7 @@
 
 
             <EditText
-                android:id="@+id/novoUsuario_nu_telefone"
+                android:id="@+id/newAgent_nu_telefone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -64,7 +64,7 @@
                 />
 
             <EditText
-                android:id="@+id/novoUsuario_ed_email"
+                android:id="@+id/newAgent_ed_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -78,14 +78,14 @@
 
             <Spinner
                 android:id="@+id/newAgente_spProfissao"
+                style="@android:style/Widget.Material.Light.Spinner.Underlined"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                style="@android:style/Widget.Material.Light.Spinner.Underlined"/>
+                android:layout_marginTop="16dp" />
 
             <Spinner
                 android:id="@+id/newAgente_spUnidade"
@@ -96,12 +96,11 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
-                android:hint="@string/unidade"
                 android:inputType="text"
                 style="@android:style/Widget.Material.Light.Spinner.Underlined"/>
 
             <EditText
-                android:id="@+id/novoUsuario_tx_senha"
+                android:id="@+id/newAgent_tx_senha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -115,7 +114,7 @@
                 tools:ignore="LabelFor"/>
 
             <EditText
-                android:id="@+id/novoUsuario_repete_tx_senha"
+                android:id="@+id/nnewAgent_repete_tx_senha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -130,7 +129,7 @@
 
 
             <TextView
-                android:id="@+id/novoUsuario_tx_foto"
+                android:id="@+id/newAgent_tx_foto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -140,7 +139,7 @@
                 android:textStyle="bold" />
 
             <ImageButton
-                android:id="@+id/novoUsuario_inserirFoto"
+                android:id="@+id/newAgent_inserirFoto"
                 style="@android:style/Widget.ImageButton"
                 android:layout_width="200dp"
                 android:layout_height="56dp"
