--- a/app/src/main/res/menu/menu_usuario_logado.xml
+++ b/app/src/main/res/menu/menu_usuario_logado.xml
@@ -2,15 +2,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.dehcors.teleconsultorapp.UsuarioLogado">
-    <item
-        android:id="@+id/userLogado_info"
-        android:checkable="false"
-        android:icon="?android:attr/actionModeFindDrawable"
-        android:title="@string/edit_info"
-        app:showAsAction="collapseActionView" />
-    <item
+
+
+        <item
+            android:id="@+id/userLogado_info"
+            android:icon="@android:drawable/ic_menu_edit"
+            android:title="@string/edit_info"
+            app:showAsAction="collapseActionView"/>
+        <item
         android:id="@+id/userLogado_senha"
         android:icon="@android:drawable/ic_partial_secure"
         android:title="@string/change_password"
-        app:showAsAction="collapseActionView" />
+        />
+
 </menu>
