--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,13 +2,14 @@
 <resources>
     <color name="colorPrimary">#66bb6a</color>
     <color name="colorPrimaryDark">#338a3e</color>
-    <color name="colorAccent">#98ee99</color>
+    <color name="colorAccent">#2962ff</color>
+    <color name="primaryAcent">#98ee99</color>
     <color name="colorSecondary">#2962ff</color>
     <color name="colorSecondaryDark">#0039cb</color>
     <color name="colorSecondaryAccent">#768fff</color>
     <color name="indigo">#5c6bc0</color>
     <color name="deepPurple">#813ab7</color>
     <color name="newBackground">#d6d6d6</color>
-    <color name="white">#fff</color>
-    <color name="black">#000</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 </resources>
